[project]
name = "proxy6"
version = "0.1.0"
description = "Python SDK for the Proxy6.net API"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "AsyncAlchemist", email = "17990601+AsyncAlchemist@users.noreply.github.com" }
]
requires-python = ">=3.13"
keywords = ["proxy6", "proxy", "sdk", "ipv4", "ipv6", "mtproto", "socks5"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "requests>=2.32",
]

[project.urls]
Homepage = "https://github.com/AsyncAlchemist/proxy6-sdk"
Repository = "https://github.com/AsyncAlchemist/proxy6-sdk"
Issues = "https://github.com/AsyncAlchemist/proxy6-sdk/issues"
"API Documentation" = "https://proxy6.net/en/developers"

[build-system]
requires = ["uv_build>=0.11.14,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.0",
    "python-dotenv>=1.2.2",
    "responses>=0.26.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
markers = [
    "integration: hits the real proxy6.net API; skipped without PROXY6_API_KEY",
]
