[project]
name = "proxy6-sdk"
version = "0.1.0a2"
description = "Unofficial Python SDK for the Proxy6.net API"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "AsyncAlchemist", email = "17990601+AsyncAlchemist@users.noreply.github.com" }
]
requires-python = ">=3.13"
keywords = ["proxy6", "proxy", "sdk", "ipv4", "ipv6", "mtproto", "socks5"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "requests>=2.32",
]

[project.urls]
Homepage = "https://github.com/AsyncAlchemist/proxy6-sdk"
Repository = "https://github.com/AsyncAlchemist/proxy6-sdk"
Issues = "https://github.com/AsyncAlchemist/proxy6-sdk/issues"
Changelog = "https://github.com/AsyncAlchemist/proxy6-sdk/blob/main/CHANGELOG.md"
"API Documentation" = "https://proxy6.net/en/developers"

[build-system]
requires = ["uv_build>=0.11.14,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
# Distribution name is ``proxy6-sdk`` but the import name (and the actual
# package on disk under ``src/``) is ``proxy6``.
module-name = "proxy6"

[dependency-groups]
dev = [
    "aiohttp>=3.10",
    "httpx>=0.28",
    "pytest>=9.1.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=7.1.0",
    "python-dotenv>=1.2.2",
    "responses>=0.26.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
asyncio_mode = "strict"
markers = [
    "integration: hits the real proxy6.net API; skipped without PROXY6_API_KEY",
]

[tool.coverage.run]
source = ["proxy6"]
branch = true

[tool.coverage.report]
exclude_also = [
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "pragma: no cover",
]
show_missing = true
